2009-08-24  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/termination_test.c
    Add test to detect a particular kind of termination error.

    * src/src_sinc.c
    Fix a termination condition bug.

2009-06-25  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h
    Change definition of SRC_STATE to be kinder to some slightly broken
    compilers. Thanks to Rob Brown for suggesting this fix.

2009-04-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * M4/check_signal.m4 M4/clip_mode.m4 M4/lrint.m4 M4/lrintf.m4
    New files used instead of acinclude.m4.

2009-04-03  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h
    Move src_ratio field to the start of the SRC_DATA struct to ensure it gets
    aligned correctly when either the library or client code gets compiled with
    -malign-double.

    * configure.ac
    Bump version to 1.0.0 due to API change.

2009-02-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * Win32/Makefile.msvc
    Add /Zm1000 to the CFLAGS as suggested by Kun Niu.

    * doc/api_full.html doc/api_callback.html
    Improve explanation of use of src_set_ratio() function.

2009-02-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.h src/samplerate.c
    Add new error value SRC_ERR_SINC_PREPARE_DATA_BAD_LEN.

    * src/common.h
    Add WARN_UNUSED macro.

    * src/src_sinc.c
    Fix a segfault which occurs when memcpy is passed a bad length parameter.
    This bug has zero security implications beyond the ability to cause a
    program hitting this bug to exit immediately with a segfault.
    See : http://www.mega-nerd.com/erikd/Blog/2009/Feb/14/index.html
    Thanks to David Cournapeau and Lev Givon for the bug report.

    * doc/win32.html Makefile.am configure.ac
    Reinstate Win32/MSVC compile instructions.

    * doc/*.html
    Update for new release.

    * configure.ac
    Verison 0.1.7.
