@@ -1,3 +1,8 @@
+2009-09-16  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * M4/endian.m4
+    Fix detection of CPU endian-ness when cross compiling.
+
 2009-08-24  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * tests/termination_test.c
